Align adoption cards and fix body tags

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ body {
   grid-template-rows: repeat(8, 3fr)
 }
 
+main {
+  height: 100%;
+  width: 100%;
+}
+
 .logo {
   height: 200px;
   width: 200px;
@@ -37,11 +42,17 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 30%;
+  width: 60%;
   background-color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .rat-photo {
-  height: 100%;
-  width: 80%;
+  /* height: 100%; */
+  width: 100%;
+}
+
+.adoption-details {
+  width: 100%;
 }
